[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fits-show-map"
version = "0.1.0"
description = "Utilities for displaying and manipulating FITS images (WCS-aware)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Shengtao Wang"}]
license = {text = "MIT"}

dependencies = [
  "numpy",
  "astropy",
  "matplotlib",
  "regions",
  "reproject",
  "scipy",
]

[project.scripts]
fits-show-map = "fits_show_map.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
